--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.etickett">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PaymentActivity"></activity>
+        <activity android:name=".BarTicketActivity"></activity>
+        <activity android:name=".PaymentActivity" />
         <activity android:name=".SeatActivity" />
         <activity android:name=".ResultActivity" />
         <activity
@@ -18,6 +21,7 @@
         <activity android:name=".TicketActivity" />
         <activity
             android:name=".HomeActivity"
+            android:noHistory="true"
             android:label="@string/title_activity_home" />
         <activity android:name=".ForgotActivity" />
         <activity
